<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="MAD Intent Practical"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/txt_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/web_url"
                app:layout_constraintBottom_toBottomOf="@id/btn_browse"
                app:layout_constraintEnd_toStartOf="@id/btn_browse"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_browse"
                app:startIconDrawable="@drawable/ic_baseline_link_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_browse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_browse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/btn_back_color"
                android:gravity="center"
                android:text="@string/browse"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/call_number"
                app:layout_constraintBottom_toBottomOf="@id/btn_call"
                app:layout_constraintEnd_toStartOf="@id/btn_call"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_call"
                app:startIconDrawable="@drawable/ic_baseline_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_call"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_call"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/btn_back_color"
                android:text="@string/call"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="@+id/btn_browse"
                app:layout_constraintTop_toBottomOf="@+id/btn_browse" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/contact_list"
                app:layout_constraintBottom_toBottomOf="@id/btn_contact"
                app:layout_constraintEnd_toStartOf="@id/btn_contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_contact"
                app:startIconDrawable="@drawable/ic_baseline_folder_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_contact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/btn_back_color"
                android:text="@string/contact"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="@+id/btn_call"
                app:layout_constraintTop_toBottomOf="@+id/btn_call" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/call_log"
                app:layout_constraintBottom_toBottomOf="@id/btn_call_log"
                app:layout_constraintEnd_toStartOf="@id/btn_call_log"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_call_log"
                app:startIconDrawable="@drawable/ic_baseline_phone_forwarded_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_call_log"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_call_log"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/btn_back_color"
                android:text="@string/call_log1"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="@+id/btn_contact"
                app:layout_constraintTop_toBottomOf="@+id/btn_contact" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/gallery"
                app:layout_constraintBottom_toBottomOf="@id/btn_gallery"
                app:layout_constraintEnd_toStartOf="@id/btn_gallery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_gallery"
                app:startIconDrawable="@drawable/ic_baseline_photo_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/btn_back_color"
                android:text="@string/gallery1"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="@+id/btn_call_log"
                app:layout_constraintTop_toBottomOf="@+id/btn_call_log" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/camera"
                app:layout_constraintBottom_toBottomOf="@id/btn_camera"
                app:layout_constraintEnd_toStartOf="@id/btn_camera"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_camera"
                app:startIconDrawable="@drawable/ic_baseline_photo_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/btn_back_color"
                android:text="@string/camera1"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="@+id/btn_gallery"
                app:layout_constraintTop_toBottomOf="@+id/btn_gallery" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/alarm"
                app:layout_constraintBottom_toBottomOf="@id/btn_alarm"
                app:layout_constraintEnd_toStartOf="@id/btn_alarm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_alarm"
                app:startIconDrawable="@drawable/ic_baseline_alarm_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/txt_alarm"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_alarm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/btn_back_color"
                android:text="@string/alarm2"
                 app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="@+id/btn_camera"
                app:layout_constraintTop_toBottomOf="@+id/btn_camera" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>